--- a/api/package.json
+++ b/api/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js"
+    "start": "nodemon app.js"
   },
   "keywords": [],
   "author": "",
@@ -15,6 +15,7 @@
     "dotenv": "^4.0.0",
     "express": "^4.16.2",
     "node-http-error": "^2.0.0",
+    "nodemon": "^1.12.1",
     "pouchdb": "^6.3.4",
     "pouchdb-find": "^6.3.4",
     "ramda": "^0.25.0"
