--- a/api/package.json
+++ b/api/package.json
@@ -20,5 +20,9 @@
     "pouchdb": "^6.3.4",
     "pouchdb-find": "^6.3.4",
     "ramda": "^0.25.0"
+  },
+  "devDependencies": {
+    "eslint": "^4.11.0",
+    "eslint-plugin-react": "^7.5.1"
   }
 }
