api docs and begun load data and index scripts

--- a/api/package.json
+++ b/api/package.json
@@ -5,7 +5,9 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon app.js"
+    "start": "nodemon app.js",
+    "load": "node load-data.js",
+    "loadIndex": "node load-indexes.js"
   },
   "keywords": [],
   "author": "",
