--- a/api/package.json
+++ b/api/package.json
@@ -17,6 +17,8 @@
     "cors": "^2.8.4",
     "dotenv": "^4.0.0",
     "express": "^4.16.2",
+    "express-jwt": "^5.3.0",
+    "jwks-rsa": "^1.2.1",
     "node-http-error": "^2.0.0",
     "nodemon": "^1.12.1",
     "pouchdb-adapter-http": "^6.3.4",
