--- a/api/package.json
+++ b/api/package.json
@@ -7,7 +7,7 @@
     "load": "npm run load:data && npm run load:indexes",
     "load:data": "node load-data.js",
     "load:indexes": "node load-indexes.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "tape test/**/*_test.js",
     "start": "node app.js",
     "dev": "nodemon app.js"
   },
@@ -30,6 +30,9 @@
   },
   "devDependencies": {
     "eslint": "^4.11.0",
-    "eslint-plugin-react": "^7.5.1"
+    "eslint-plugin-react": "^7.5.1",
+    "nock": "^9.1.3",
+    "supertest": "^3.0.0",
+    "tape": "^4.8.0"
   }
 }
