--- a/api/package.json
+++ b/api/package.json
@@ -36,8 +36,7 @@
     "eslint-plugin-react": "^7.5.1",
     "nock": "^9.1.3",
     "supertest": "^3.0.0",
-    "tape": "^4.8.0"
+    "tape": "^4.8.0",
     "swagger-markdown": "^1.1.2"
-
   }
 }
