--- a/api/package.json
+++ b/api/package.json
@@ -26,6 +26,7 @@
     "node-http-error": "^2.0.0",
     "nodemon": "^1.12.1",
     "pouchdb-adapter-http": "^6.3.4",
+    "pouchdb-adapter-mysql": "^6.4.8",
     "pouchdb-core": "^6.3.4",
     "pouchdb-find": "^6.3.4",
     "ramda": "^0.25.0",
